# Taz

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  rust.yml
src/: constants.rs  converter.rs  evaluator.rs  functions.rs  infix.rs  lib.rs  operators.rs  postfix.rs  token.rs  token_iterator.rs  tokenizer.rs
src/expression/: evaluator.rs  infix.rs  mod.rs  postfix.rs  token_iterator.rs
src/token/: constants.rs  functions.rs  mod.rs
