[package]
name = "taz"
version = "1.0.0"
authors = ["Bastian Gonzalez Acevedo <bastiangonzalezacevedo@gmail.com>"]
edition = "2021"
license-file = "LICENSE"
description = "Taz is Rust library to evaluate a mathematical expression"
repository = "https://github.com/BaGoA/Taz"
readme = "README.md"
keywords = ["math-expressions", "calculator"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
